--- a/django/full_stack/Wall/wall_app/templates/index.html
+++ b/django/full_stack/Wall/wall_app/templates/index.html
@@ -16,11 +16,20 @@
       <a href="{% url 'logout' %}">Logout</a>
     </div>
     <p class="border-bottom border-dark mb-3"></p>
+    <div class="text-center row justify-content-center mt-4">
+      {% if messages %}
+        <div class="alert alert-danger col-7" role="alert">
+        {% for message in messages %}
+          <p>{{ message }}</p>
+        {% endfor %}
+        </div>
+      {% endif %}
+      </div>
     <div class="container mt-4">
       <form action="{% url 'create_mg' %}" method="POST"> {% csrf_token %}
         <div class="form-group">
-          <label for="message">Post a message</label>
-          <textarea name="message" class="form-control" rows="3"></textarea>
+          <label for="msg">Post a message</label>
+          <textarea name="msg" class="form-control" rows="3"></textarea>
         </div>
         <div class="text-right">
           <button type="submit" class="btn-primary">Post a message</button>
@@ -28,22 +37,22 @@
       </form>
     </div>
     <div class="container mt-4">
-      {% for message in messages %}
-      <p class="font-weight-bold">{{ message.user_id}} {{message.create_at}}</p>
-      <p class="ml-4">{{ message.message }}</p>
-        {% if message.user_id.id == request.session.user_id %}
-        <p class="text-right"><a href="{% url 'del_mg' message.id %}">delete</a></p>
+      {% for msg in user_msg %}
+      <p class="font-weight-bold">{{ msg.user}} {{msg.create_at}}</p>
+      <p class="ml-4">{{ msg.msg }}</p>
+        {% if msg.user.id == request.session.user_id %}
+        <p class="text-right"><a href="{% url 'del_mg' msg.id %}">delete</a></p>
         {% endif %}
-          {% for comment in message.comments.all %}
-        <p class="ml-5 font-weight-bold">{{ comment.user_id }} {{ comment.create_at }}</p>
+          {% for comment in msg.comments.all %}
+        <p class="ml-5 font-weight-bold">{{ comment.user }} {{ comment.create_at }}</p>
         <p class="ml-5">{{ comment.comment }}</p>
-          {% if comment.user_id.id == request.session.user_id %}
+          {% if comment.user.id == request.session.user_id %}
             {%  if comment in valid_cm %}
             <p class="text-right"><a class="text-right" href="{% url 'del_cm' comment.id %}">delete</a></p>
             {% endif %}
           {% endif %}
         {% endfor %}
-        <form class="ml-5" action="{% url 'create_cm' message.id %}" method="POST"> {% csrf_token %}
+        <form class="ml-5" action="{% url 'create_cm' msg.id %}" method="POST"> {% csrf_token %}
           <div class="form-group">
             <label for="comment">Post a comment</label>
             <textarea name="comment" class="form-control" rows="3"></textarea>            
